tests/errors/surf_lib_01.experr
no module named 'nonexistent_module_xyz'
